# pipeline

./: .buildinfo  .gitignore  CHANGELOG.md  README.html  README.md  genindex.html  index.html  install.sh  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: release.yml
_sources/: README.md
data/: get_data.sh
docs/: .gitignore  _config.yml  _toc.yml  index.md
docs/studies/1D/: 1D.md  1D.py  1d_rel.py  make_regret_plots.py  run_1d.sh
docs/studies/2D/: 2D_brute_force.py  2d.py  gp_using_true_vals.py  plot_single_surface.py  plot_surface.py
docs/studies/4D/: run_4d.py
old_studies/: trieste_testing.ipynb  trieste_testing.py
old_studies/investigations/: example_inference_with_surrogate_lnl.py
old_studies/one_param/: build_grid.sh  plot_1d_lnl.py
old_studies/scripts/: inference_post_proc.py
old_studies/scripts/single_dim/: bo_with_trieste.py
old_studies/scripts/two_dim/: bo_v2.py  plt_regret.py
old_studies/scripts/two_dim/detection_matrix/: tricolor_lnl_plot.py
old_studies/scripts/utils/: data_cache.py
old_studies/scripts/utils/slurm_utils/templates/: templates.py
old_studies/scripts/utils/utils/: corner.py  image_stacking.py
old_studies/tests/: conftest.py  test_aSF_1d_pipeline.py
old_studies/two_params/: cache_log_likelihoods.py  focused_data_gen.py  plot_lnl.py
old_studies/two_params/grid/: build_focused_grid.py  plot_surface.py
old_studies/uncertainty_testing/: compute_lnl_with_unc.py  make_det_matricies.py  plot_lnl_vs_nbootstraps.py
scripts/four_dim/: sample.py  train.py
scripts/single_dim/: bo_with_trieste.py
scripts/two_dim/: bo_v2.py  bo_with_trieste_2d.py
scripts/utils/: data_cache.py
scripts/utils/utils/: __init__.py  gif_generator.py
src/pipeline/: cli.py  rebuild_lnl_surrogate.py
src/pipeline/pp_test/: __init__.py  data_analysis_job.py  data_gen_job.py  main.py  make_multiple_pp_plots.py  make_pp_plot.py  utils.py
src/pipeline/pp_test/templates/: bash_template.sh  slurm_template.sh
src/pp_test/: cli.py  data_analysis_job.py  data_gen_job.py  extract_all_simulation_kl_divergences.py  make_multiple_pp_plots.py  make_pp_plot.py  pp_test.py
src/pp_test/templates/: bash_template.sh  slurm_template.sh
studies/: multiple_pp_plots.py
studies/1D/: 1D.html
studies/LVK/: README.md  collect_and_plot_results.py  compare_lnl.py  compare_posteriors_medians.md  lvk_bash.sh  lvk_submit.sh  plot_median_model.py  pygtc.py
studies/four_params/: slurm_make_matricies.sh  thresholded_lnl_sampler.py
studies/one_param/pp_test/: aSF.sh  muz.sh
studies/two_params/pp_test/: aSF_muz.sh
tests/: conftest.py  run_1.py  test_aSF_1d_pipeline.py
