[train-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0",
    "wheel"
]
train-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["pipeline*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["pipeline.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[project]
name = "pipeline"
dynamic = ["version"] # scm versioning (using tags)
requires-python = ">=3.8"
description = "Pipeline tools for COMPAS LnL(d|θ)± ΔLnL(d|θ)"
readme = "README.md"
authors = [
    {name = "Avi Vajpeyi", email = "avi.vajpeyi@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
#dependencies = [
#    "lnl_surrogate@git+https://github.com/COMPAS-Surrogate/lnl_surrogate.git",
#]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]",
    "pre-commit",
    "flake8>=5.0.4",
    "black==22.10.0",
    "jupyter-book",
]

[tool.setuptools_scm]
version_file = "src/pipeline/_version.py"


[project.urls]  # Optional
"Homepage" = "https://github.com/COMPAS-Surrogate/pipeline"
"Bug Reports" = "https://github.com/COMPAS-Surrogate/pipeline/issues"
"Source" = "https://github.com/COMPAS-Surrogate/pipeline/"



[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | train
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]

# CLI script
[project.scripts]
setup_pp_test = "pipeline.cli:setup_pp_test"
pp_test = "pipeline.cli:pp_test"
make_multiple_pp_plots = "pipeline.cli:make_multiple_pp_plots"
compute_distances = "pipeline.cli:compute_distances"

