[train-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0",
    "wheel"
]
train-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["pp_test*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["pp_test.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[project]
name = "pp_test"
dynamic = ["version"] # scm versioning (using tags)
requires-python = ">=3.8"
description = "pp_test tools for COMPAS LnL(d|θ)± ΔLnL(d|θ)"
readme = "README.md"
authors = [
    {name = "Avi Vajpeyi", email = "avi.vajpeyi@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "compas_surrogate.acquisition_plotting",
    "compas_surrogate.lnl_computer",
    "compas_surrogate.lnl_surrogate",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]",
    "pre-commit",
    "flake8>=5.0.4",
    "black==22.10.0",
    "jupyter-book",
]

[tool.setuptools_scm]
version_file = "src/pipeline/_version.py"


[project.urls]  # Optional
"Homepage" = "https://github.com/COMPAS-Surrogate/pp_test"
"Bug Reports" = "https://github.com/COMPAS-Surrogate/pp_test/issues"
"Source" = "https://github.com/COMPAS-Surrogate/pp_test/"



[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | train
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]

# CLI script
[project.scripts]
setup_pp_test = "pp_test.cli:setup_pp_test"
pp_test = "pp_test.cli:pp_test"
make_multiple_pp_plots = "pp_test.cli:make_multiple_pp_plots"

